--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,2 +1,1 @@
-
-<app-login></app-login>
+<router-outlet class="lock-screen"></router-outlet> <!-- This is where the routed components will be displayed -->
