--- a/Client/src/app/login/login.component.html
+++ b/Client/src/app/login/login.component.html
@@ -1,33 +1,42 @@
-<div class="auth-container" [@formAnimation]="currentState">
-  <form [formGroup]="loginForm" *ngIf="currentState === 'login'" (ngSubmit)="onLoginSubmit()">
-    <h2>Login</h2>
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input type="text" class="form-control" formControlName="username" id="username" placeholder="Enter username">
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" class="form-control" formControlName="password" id="password" placeholder="Password">
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-    <p>Don't have an account? <a href="#" (click)="toggleForm('register')">Register</a></p>
-  </form>
+<div class="auth-container">
+	<div class="login" *ngIf="!currentState">
+		<form [formGroup]="loginForm" (ngSubmit)="onLoginSubmit()">
+			<h2>Login</h2>
+			<div class="form-group">
+				<label for="username">Username</label>
+				<input type="text" class="form-control" formControlName="username" id="username"
+					placeholder="Enter username">
+			</div>
+			<div class="form-group">
+				<label for="password">Password</label>
+				<input type="password" class="form-control" formControlName="password" id="password"
+					placeholder="Password">
+			</div>
+			<button type="submit" class="btn btn-primary">Login</button>
+			<p>Don't have an account? <button (click)="toggleForm('register')">Register</button></p>
+		</form>
+	</div>
+	<div class="register" *ngIf="currentState">
+		<form [formGroup]="registerForm" (ngSubmit)="onRegisterSubmit()">
+			<h2>Register</h2>
+			<div class="form-group">
+				<label for="username">Username</label>
+				<input type="text" class="form-control" formControlName="username" id="reg-username"
+					placeholder="Enter username">
+			</div>
+			<div class="form-group">
+				<label for="password">Password</label>
+				<input type="password" class="form-control" formControlName="password" id="reg-password"
+					placeholder="Password">
+			</div>
+			<div class="form-group">
+				<label for="confirmPassword">Confirm Password</label>
+				<input type="password" class="form-control" formControlName="confirmPassword" id="confirmPassword"
+					placeholder="Confirm Password">
+			</div>
+			<button type="submit" class="btn btn-primary">Register</button>
+			<p>Already have an account? <button (click)="toggleForm('login')">Login</button></p>
+		</form>
+	</div>
 
-  <form [formGroup]="registerForm" *ngIf="currentState === 'register'" (ngSubmit)="onRegisterSubmit()">
-    <h2>Register</h2>
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input type="text" class="form-control" formControlName="username" id="reg-username" placeholder="Enter username">
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" class="form-control" formControlName="password" id="reg-password" placeholder="Password">
-    </div>
-    <div class="form-group">
-      <label for="confirmPassword">Confirm Password</label>
-      <input type="password" class="form-control" formControlName="confirmPassword" id="confirmPassword" placeholder="Confirm Password">
-    </div>
-    <button type="submit" class="btn btn-primary">Register</button>
-    <p>Already have an account? <a href="#" (click)="toggleForm('login')">Login</a></p>
-  </form>
 </div>
